# Webex_Chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py  start.py
bot_server/: app.py  config.py
bot_server/config/: approved_users.json  personalities.json  user-mappings.json
bot_server/handlers/: __init__.py  command_handler.py  message_queue.py  webhook_handler.py
bot_server/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai_provider.py  xai.py
bot_server/services/: __init__.py  memory.py  personality.py  user_manager.py
docs/: deploy-instruct.md  project-plan.md
tests/: conftest.py  test_app.py  test_config.py  test_setup.py  test_start.py
tests/test_handlers/: test_command_handler.py  test_message_queue.py  test_webhook_handler.py
tests/test_providers/: test_anthropic.py  test_base.py  test_factory.py  test_gemini.py  test_ollama.py  test_openai.py  test_xai.py
tests/test_services/: __init__.py  test_memory.py  test_personality.py  test_user_manager.py
